--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,36 @@ button {
   cursor: pointer;
 }
 
+button:hover {
+  -webkit-transform: scale(1.2);
+-ms-transform: scale(1.2);
+transform: scale(1.2);
+transition: all 0.3s ease;
+}
 .add-todo-item {
-  color: white;
-  font-size: 30px;
-  vertical-align: middle;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px;
+  width: 20px;
+  height: 100%;
+}
+
+.add-todo-item::before,
+.add-todo-item::after {
+  content: "";
+  position: absolute;
+  width: 17px;
+  height: 2px;
+  top: 50%;
+  right: 0;
+  background-color: #fff;
+}
+
+.add-todo-item::before {
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
 }
 
 .form-add-todo {
@@ -59,6 +85,7 @@ button {
 .form-add-todo input:focus {
   outline: none;
 }
+
 .todo-list {
   list-style: none;
 }
@@ -81,6 +108,7 @@ button {
   background-color: rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
+
 .todo-item-delete {
   position: absolute;
   right: 0;
