--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ transition: all 0.3s ease;
 .form-add-todo input:focus {
   background-color: transparent;
   border-color: transparent;
+  box-shadow: none;
   border-bottom: 2px solid white;
   color: white;
   font-weight: 700;
